--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -4,6 +4,10 @@
     body {
         background-image: var(--image-bg-sm);
     }
+
+    #main-nav {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 640px) {
@@ -44,6 +48,10 @@ body {
     background-size: var(--bg-size);
 }
 
+#site-container a:hover {
+    text-decoration: underline;
+}
+
 /* Site header */
 
 #site-header ::-moz-selection, .tag ::-moz-selection {
@@ -61,8 +69,12 @@ header a:hover, header a:active, header a:focus {
     color: var(--color-fg-main);
 }
 
-header a:link, header a:visited, #site-header header a:hover, #site-header header a:active {
+header a:link, header a:visited,  {
     color: var(--color-fg-main);
+    text-decoration: none;
+}
+
+#site-header a:hover, #site-header a:active {
     text-decoration: none;
 }
 
@@ -82,6 +94,7 @@ header a:link, header a:visited, #site-header header a:hover, #site-header heade
     /* Tested working with multiple sites -
     no vertical shift when thumbnail loads */
     max-height: 5.8rem;
+    max-width: 5.8rem;
     padding-left: 0;
     padding-right: 0.5rem;
     border-radius: var(--thumbnail-radius);
@@ -161,10 +174,6 @@ pre {
 #page-header h1 {
     font-weight: bold;
     margin-top: 0;
-}
-
-#site-container a:hover {
-    text-decoration: underline;
 }
 
 main {
@@ -269,6 +278,7 @@ footer .row { align-items: center; }
 }
 
 #off-canvas-toggle {
+    z-index: 1;
     position: sticky;
     left: 0;
     top: 0;
@@ -303,8 +313,10 @@ footer .row { align-items: center; }
     border-top-color: var(--color-fg-accent);
 }
 
-.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a::after {
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a::after,
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-left > a::after {
     border-left-color: var(--color-fg-alt);
+    border-right-color: var(--color-fg-alt);
 }
 
 .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a:hover::after,
@@ -312,17 +324,21 @@ footer .row { align-items: center; }
 .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a:focus::after,
 .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a.active::after {
     border-left-color: var(--color-fg-accent);
+    background-color: var(--color-bg-accent);
 }
 
-.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a::before {
-    border-right-color: var(--color-fg-alt);
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-left > a.button {
+    padding-left: 1rem;
 }
 
-.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a:hover::before,
-.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a:active::before,
-.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a:focus::before,
-.is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a.active::before {
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-left > a:hover::after,
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-left > a:active::after,
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-left > a:focus::after,
+.is-dropdown-submenu .is-dropdown-submenu-parent.opens-left > a.active::after {
+    border-left-color: var(--color-fg-accent);
     border-right-color: var(--color-fg-accent);
+    background-color: var(--color-bg-accent);
+    margin-right: 1rem;
 }
 
 .is-drilldown-submenu-parent a::after {
